--- a/spark_plug/index.html
+++ b/spark_plug/index.html
@@ -4,11 +4,39 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<style>
-		*{margin:0;padding:0;}
-		html,body{height: 100%;}
-		#box{width: 100%;height: 100%;background: #000;position: relative;}
-		.spark{width: 10px;height:10px;border-radius: 50%;background:#fff;position: absolute;left: 50%;top: 100%;margin-top: -10px;}
-		.fire{width: 10px;height:10px;border-radius: 50%;background:#fff;position: absolute;}
+		*,
+		*:before,
+		*:after{
+			margin:0;
+			padding:0;
+		}
+		html,
+		body{
+			height: 100%;
+		}
+		#box{
+			width: 100%;
+			height: 100%;
+			background: #000;
+			position: relative;
+		}
+		.spark{
+			width: 10px;
+			height:10px;
+			border-radius: 50%;
+			background:#fff;
+			position: absolute;
+			left: 50%;
+			top: 100%;
+			margin-top: -10px;
+		}
+		.fire{
+			width: 10px;
+			height:10px;
+			border-radius: 50%;
+			background:#fff;
+			position: absolute;
+		}
 	</style>
 </head>
 <body>
