--- a/page.html
+++ b/page.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>一个基于面向对象的分页组件</title>
+        <title>面向对象--分页组件</title>
         <style>
             html,body{padding:0;margin:0;}
             p{padding:0;margin:0;}
