--- a/css3.html
+++ b/css3.html
@@ -33,7 +33,7 @@
 			background: linear-gradient(to bottom,#20A0FF,#FF4949);
 		}
 		.box2{
-			background: linear-gradient(to right top,#13CE66,#F7BA2A);
+			background: linear-gradient(to right bottom,#b6f9fe,#3568d6);
 		}
 		.box3{
 			background: linear-gradient(to right,#1F2D3D,#20a0ff);
