--- a/css3.html
+++ b/css3.html
@@ -36,7 +36,7 @@
 			background: linear-gradient(to right bottom,#b6f9fe,#3568d6);
 		}
 		.box3{
-			background: linear-gradient(to right,#1F2D3D,#20a0ff);
+			background: linear-gradient(to right,#20a0ff,#1F2D3D);
 		}
 		.box4{
 			background: linear-gradient(to right,#1f2d3d,#20a0ff,#13ce66,#f7ba2a,#ff4949)
