--- a/css3.html
+++ b/css3.html
@@ -19,15 +19,17 @@
 			flex-direction: row;
 			justify-content: space-between;
 			align-items: center;
+			flex-wrap: wrap;
 		}
 		.box{
 			width: 300px;
 			height: 100px;
 			float: left;
-			
 			text-align: center;
 			line-height: 100px;
 			color: #fff;
+			margin-bottom: 20px;
+			text-shadow: 5px 5px 5px #475669;
 		}
 		.box1{
 			background: linear-gradient(to bottom,#20A0FF,#FF4949);
@@ -41,6 +43,10 @@
 		.box4{
 			background: linear-gradient(to right,#1f2d3d,#20a0ff,#13ce66,#f7ba2a,#ff4949)
 		}
+		.card{
+			background: linear-gradient(to right,#b6f9fe,#3568d6);
+			box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+		}
 	</style>
 </head>
 <body>
@@ -50,6 +56,7 @@
 			<div class="box box2">由左下至右上颜色渐变</div>
 			<div class="box box3">由左至右颜色渐变</div>
 			<div class="box box4">多个颜色节点</div>
+			<div class="box card">卡片效果</div>
 		</div>
 	</div>
 </body>
