--- a/div获取焦点.html
+++ b/div获取焦点.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>div如何获取和失去焦点</title>
 	<style>
 		*,*:before,*:after{
 			margin: 0;
