--- a/es6/class语法/drag.html
+++ b/es6/class语法/drag.html
@@ -94,7 +94,7 @@
 	                self = this,
 	                i = 0;
 	            setInterval(() => {
-	                self.ele.style.background = colorArr[i % 4];
+	                this.ele.style.background = colorArr[i % 4];
 	                i++;
 	            }, 1000)
 	        }
