--- a/spark_plug/index.html
+++ b/spark_plug/index.html
@@ -41,7 +41,7 @@
 </head>
 <body>
 	<div id="box"></div>
-	<script src='../jquery-1.8.3.min.js'></script>
+	<script src='https://cdn.bootcss.com/jquery/1.10.2/jquery.min.js'></script>
 	<script src='fireworks.js'></script>
 	<script>
 		$(function(){
