--- a/es6/class语法/sports.html
+++ b/es6/class语法/sports.html
@@ -9,45 +9,115 @@
 		*:after{
 			margin: 0;padding: 0;
 		}
-
+		div{
+			width: 100px;height: 100px;position: absolute;
+		}
 		#box{
-			width: 100px;height: 100px;background: red;position: absolute;left: 0;
+			background: red;left: 0;
+		}
+
+		#box1{
+			background: blue;left: 0;top: 400px;
+		}
+
+		#box2{
+			background: green;left: 400px;top: 0;
+		}
+
+		#box3{
+			background: yellow;left: 400px;top: 300px;
 		}
 	</style>
 </head>
 <body>
 	<div id="box"></div>
+	<div id="box1"></div>
+	<div id="box2"></div>
+	<div id="box3"></div>
 	<script src="https://cdn.bootcss.com/jquery/1.10.2/jquery.min.js"></script>
 	<script>
 		class Sport {
 			constructor(id){
 				this.ele = $(`#${id}`);
 			}
-			sport(x, y, time){
+			init(obj){
+				this.ele.click(() => {
+					this.sport(obj);
+				})
+			}
+			sport(obj){
 				this.ele.animate({
-					left: x,
-					top: 0
-				}, time, () => {
+					left: obj.x,
+					top: obj.startY
+				}, obj.time, () => {
 					this.ele.animate({
-						left: x,
-						top: y
-					}, time, () => {
+						left: obj.x,
+						top: obj.y
+					}, obj.time, () => {
 						this.ele.animate({
-							left: 0,
-							top: y
-						}, time, () => {
+							left: obj.startX,
+							top: obj.y
+						}, obj.time, () => {
 							this.ele.animate({
-								left: 0,
-								top: 0
-							}, time, () => {
-								this.sport();
+								left: obj.startX,
+								top: obj.startY
+							}, obj.time, () => {
+								this.sport(obj);
 							})
 						})
 					})
 				})
 			}
 		}
-		new Sport('box').sport(400, 400, 800);
+
+		class SubSport extends Sport{
+			constructor(id){
+				super();
+				this.ele = $(`#${id}`);
+			}
+			init(){
+				this.ele.click(() => {
+					this.change();
+				})
+			}
+			change(){
+				this.ele.animate({
+					width: 200,
+					height: 200
+				}, 1000, () => {
+					this.ele.animate({
+						width: 100,
+						height: 100
+					}, 1000, () => {
+						this.change();
+					});
+				})
+			}
+		}
+		new Sport('box').sport({
+			startX: 0,
+			startY: 0,
+			x: 300,
+			y: 300,
+			time: 1000
+		});
+		new Sport('box1').init({
+			startX: 0,
+			startY: 400,
+			x: 200,
+			y: 600,
+			time: 1000
+		})
+
+		new SubSport('box2').sport({//new 继承的对象
+			startX: 400,
+			startY: 0,
+			x: 600,
+			y:200,
+			time: 1000
+		});
+
+		new SubSport('box3').init();
 	</script>
 </body>
 </html>
