tab切换精简版

--- a/tab.html
+++ b/tab.html
@@ -77,7 +77,8 @@
 		</div>
 		<script>
 			/**
-			 * @description firstLi标记为前一个选择的元素 点击的时候firstLi样式清空 同时 当前元素赋给firstLi 给定样式 ; 要比循环将所有元素样式清空 再给当前元素样式效率高 代码更为精简
+			 * @description firstLi标记为前一个选择的元素 点击的时候firstLi样式清空 同时 当前元素赋给firstLi 给定样式 ;
+			 * 要比循环将所有元素样式清空 再给当前元素样式效率高 代码更为精简
 			 */
 			var oTab = document.getElementById("tab"),
 				firstLi = document.getElementsByTagName('li')[0],
