tab切换精简版

--- a/tab.html
+++ b/tab.html
@@ -99,7 +99,9 @@
 					console.timeEnd('tab')
 				}
 			}
-			
+			/**
+			 * @description 两个循环实现tab切换
+			 */
 			var subTab = document.getElementById("sub_tab"),
 				sub_all_li = subTab.getElementsByTagName("li"),
 				sub_title = document.getElementById("sub_title");
