--- a/scss/index.html
+++ b/scss/index.html
@@ -17,10 +17,10 @@
 		<p>3-2  expanded：没有缩进的、扩展的css代码</p>
 		<p>3-3  compact：简洁格式的css代码</p>
 		<p>3-4  compressed：压缩后的css代码</p>
-		<h3>4.生产环境：sass --style compressed test.sass test.css</h3>
+		<h3>4.生产环境：sass --style compressed test.scss test.css</h3>
 		<h3>5.让SASS监听某个文件或目录，一旦源文件有变动，就自动生成编译后的版本</h3>
 		<p>5-1  sass --watch input.scss:output.css</p>
-		<p>5-2  sass --watch app/sass:public/stylesheets</p>
+		<p>5-2  sass --watch sass所在文件夹: css所在文件夹 eg: sass --watch sass:css</p>
 		<h3>6.导入编译后的css文件即可</h3>
 	</div>
 	<div class="test">
