--- a/es6/promise/promise.html
+++ b/es6/promise/promise.html
@@ -46,11 +46,11 @@
         divsion(val) {
         	val /= 5;
         	console.log(val);
-        	return new Promise((resolve, reject) => {
-        		setTimeout(() => {
-        			resolve(val);
-        		}, 2000);
-        	});
+        	// return new Promise((resolve, reject) => {
+        	// 	setTimeout(() => {
+        	// 		resolve(val);
+        	// 	}, 2000);
+        	// });
         }
     }
     obj.myPromise(20);
